* Dec 27 2000 hship

Added the new Hangman tutorial.

* Dec 26 2000 hship

Add a "borrowed books" listing to the MyBooks page, with a quick button to return books to their owners.
Add a Borrow component to create a link for borrowing a book.
Other reorgs and cleanups.
Provide larger (30 book) started Vlib database.

* Dec 22 2000 hship

Simplify some Vlib pages, now that Tapestry supports conversion between EJBObject and Handle automatically.
Remove the lendCount attribute from the IBook EJB.
Convert Vlib to use InstantDB intead of Hypersonic SQL.
Change VlibBeans to automatically configure jBoss using the new JBE_SPLICE code.

* Dec 20 2000 hship

Update the Vlib application to use the new FieldLabel component.

* Dec 19 2000 hship

Fix a bug in VlibBeans where the Operations.getPerson() method built invalid SQL
for the query.
Fill out much more of the functionlity of Vlib/JSP, and add closure (links point
to a simply Not Yet Implemented page).

* Dec 13 2000 hship

Lots of changes in the Vlib to make use of the new validating text field components.
Remove lots of unneeded package Makefiles.

* Dec 11 2000 hship

Fix Makefiles for the new usage of the JBE_CANONICALIZE macro.

* Nov 22 2000 hship

Update Virtual Library documentation.

* Nov 20 2000 hship

Minor fixes to Makefiles; especially to make them work correctly before the JBE Util class
has been compiled.

* Nov 20 2000 hship

Final documentation changes for release 0.2.6.

* Nov 17 2000 hship

Convert the VlibBeans over to jBoss.
Fix some minor VlibBeans bugs.
Add a few key classes from ServletUtils to Vlib.

* Nov 7 2000 hship

Convert the Vlib demo over to using Jetty.
Delete the old "blue border" demo.

* Nov 1 2000 hship

More changes to the Tutorial, to take advantage of Tapestry's switch-over to Servlet 2.2.

* Nov 1 2000 hship

Convert the Tutorial over to using Jetty.

* Nov 1 2000 hship

Remove dependecy on IBM's JLog toolkit (to be replaced with Log4J, which is open source).