@@ -25,7 +25,7 @@ EXEC_CLASSPATH = \
 	$(INSTALL_DIR)/xerces.jar \
 	$(INSTALL_DIR)/gnu-regexp.jar \
 	$(INSTALL_DIR)/com.mortbay.jetty.jar \
-	$(INSTALL_DIR)/j2ee.jar
+	$(INSTALL_DIR)/ejb.jar
 
 run: setup-jbe-util
 	@$(ECHO) "\n*** Running Jetty for Tutorial ... ***\n"
