@@ -1,3 +1,7 @@
+* Dec 28 2000 hship
+
+Change Hangman tutorial due to changes in RadioGroup and Radio components.
+
 * Dec 27 2000 hship
 
 Added the new Hangman tutorial.
